--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,31 @@
 buildscript {
-    ext {
-        depManagmentVersion = "1.0.8.RELEASE"
-    }
     repositories {
         mavenCentral()
-        jcenter()
     }
     dependencies {
-        classpath("io.spring.gradle:dependency-management-plugin:${depManagmentVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.1.RELEASE")
     }
 }
 
-allprojects {
-    group 'org.home.acc'
-    version '1.0.SNAPSHOT'
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
+bootJar {
+    baseName = 'gs-rest-service'
+    version =  '0.1.0'
 }
 
-subprojects {
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-    apply plugin: 'java'
-    apply plugin: 'idea'
-    apply plugin: "io.spring.dependency-management"
-
+repositories {
+    mavenCentral()
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
+dependencies {
+    compile("org.springframework.boot:spring-boot-starter-web")
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+}
