--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,17 +1,24 @@
-plugins {
-    id 'war'
-
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.1.RELEASE")
+    }
 }
 
-group 'org.home.acc'
-version '1.0.SNAPSHOT'
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile project(':service')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
